--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,32 @@
   padding: 10px;
 }
 
+/* input칸 타이틀 */
 .inputTitle {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   padding: 20px;
   background-color: rgb(233, 232, 232);
   border: 1px solid gray;
   margin-bottom: 10px;
 }
 
+/* 박스 큰 틀 */
+.boxContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+/* 개별 박스 디자인*/
 .workingBox {
   border: 3px solid rgba(7, 93, 34, 0.806);
   border-radius: 10px;
   width: 300px;
   padding: 10px;
   margin: 10px;
+}
+
+/* 개별 박스 정렬 Flex */
+.boxFlex {
+  display: flex;
 }
