--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,8 @@ body {
 
 /* ToDoList, Done 박스 개별 디자인 */
 .workingBox {
-  border: 2px solid rgb(129, 129, 215);
+  /* border: 2px solid rgb(129, 129, 215); */
+  border: 2px solid rgb(135, 206, 235);
   background-color: white;
   border-radius: 30px;
   width: 250px;
@@ -64,8 +65,8 @@ body {
 }
 
 .workingBox:hover {
-  box-shadow: 0px 0px 5px 0px navy;
-  background-color: rgb(231, 234, 251);
+  box-shadow: 0px 0px 10px 0px rgb(32, 172, 227);
+  /* background-color: rgb(231, 234, 251); */
 }
 
 /* ToDoList, Done 안에서의 박스 정렬 */
@@ -76,7 +77,7 @@ body {
   border-top: 2px solid rgb(242, 242, 242);
 }
 
-/* ToDoList, Done 글씨 */
+/* ToDoList, Done 타이틀 글씨 */
 .working > span {
   font-size: 25px;
   font-weight: bold;
@@ -85,4 +86,23 @@ body {
 .done > span {
   font-size: 25px;
   font-weight: bold;
+}
+
+/* 삭제 버튼 */
+.removeBtn {
+  color: rgb(91, 91, 91);
+  background-color: rgb(255, 236, 130);
+  border: 0px;
+  border-radius: 10px;
+  width: 110px;
+}
+
+/* 완료 버튼 */
+.completeBtn {
+  color: rgb(91, 91, 91);
+  background-color: rgb(101, 161, 211);
+  border: 0px;
+  border-radius: 10px;
+  width: 110px;
+  color: white;
 }
