--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
 }
 
-/* input 타이틀 (input box) */
+/* input box */
 .inputTitle {
   width: 400px;
   height: 250px;
@@ -46,10 +46,15 @@ body {
   background-color: rgb(135, 206, 235);
 }
 
-/* to Do List, Done 화면 가운데 정렬 */
-.boxContainer {
-  display: flex;
-  flex-direction: column;
+/* ToDoList, Done 타이틀 글씨 */
+.working > span {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.done > span {
+  font-size: 25px;
+  font-weight: bold;
 }
 
 /* ToDoList, Done 박스 개별 디자인 */
@@ -64,7 +69,7 @@ body {
   margin: 14px;
 }
 
-/* 박스의 title, body 디자인 */
+/* Todo list 각 박스의 title, body 디자인 */
 .boxTitle,
 .boxBody {
   margin: auto;
@@ -96,17 +101,6 @@ body {
   flex-wrap: wrap;
   min-height: 150px;
   border-top: 2px solid rgb(242, 242, 242);
-}
-
-/* ToDoList, Done 타이틀 글씨 */
-.working > span {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.done > span {
-  font-size: 25px;
-  font-weight: bold;
 }
 
 /* 삭제, 완료, 취소 버튼 */
